Fix z-index in NavBar

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -8,6 +8,7 @@
     position: sticky;
     background-color: #FFFFFF;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    z-index: 9;
 }
 .parent-buttons-nav{
     box-sizing: border-box;
